--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.3.1",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
