--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@vercel/speed-insights": "^1.2.0",
     "browserslist": "^4.24.4",
     "framer-motion": "^12.9.2",
     "gray-matter": "^4.0.3",
