--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^3.1.0",
     "@vercel/speed-insights": "^1.2.0",
     "browserslist": "^4.24.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
     "gray-matter": "^4.0.3",
     "next": "15.3.1",
